--- a/color/index.html
+++ b/color/index.html
@@ -37,13 +37,13 @@
     <span class="close">&times;</span>    
         <p>Write in a color with RGB parameters</p>
         <div class="number">
-            <b>Red</b> Channel: <input class="number" id="rNumber" name="redChannel" step="1" maxlength="3" min="0" max="255" type="number"><br>
+            <b>Red</b> Channel: <input class="number" id="rNumber" name="redChannel" step="1" maxlength="3" min="0" max="255" type="tel"><br>
         </div>     
         <div class="number">
-            <b>Green</b> Channel: <input class="number" id="gNumber" name="greenChannel" step="1" maxlength="3" min="0" max="255" type="number"><br>
+            <b>Green</b> Channel: <input class="number" id="gNumber" name="greenChannel" step="1" maxlength="3" min="0" max="255" type="tel"><br>
         </div>    
         <div class="number">
-            <b>Blue</b> Channel: <input id="bNumber" name="blueChannel" step="1" maxlength="3" min="0" max="255" type="number"><br>
+            <b>Blue</b> Channel: <input id="bNumber" name="blueChannel" step="1" maxlength="3" min="0" max="255" type="tel"><br>
         </div>
     </div>
 </div>   
